[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/material_maker/graph_edit.gd" type="Script" id=1]

[node name="GraphEdit" type="GraphEdit"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
use_snap = false
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ButtonUp" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 4.0
margin_right = -14.0
margin_bottom = 24.0
text = "Up"
[connection signal="connection_request" from="." to="." method="connect_node"]
[connection signal="disconnection_request" from="." to="." method="disconnect_node"]
[connection signal="timeout" from="Timer" to="." method="do_send_changed_signal"]
[connection signal="pressed" from="ButtonUp" to="." method="on_ButtonUp_pressed"]
